--- a/client/modules/App/App.css
+++ b/client/modules/App/App.css
@@ -2,4 +2,11 @@
   width: 100%;
   padding: 15px;
   margin: 0 auto;
+  display: flex;
+}
+.sideBar > ul > li > a {
+  color: white;
+}
+.sideBar > ul > li > a:hover {
+  color: #0b15e9;
 }
