--- a/client/main.css
+++ b/client/main.css
@@ -29,7 +29,7 @@ input:-moz-placeholder {
 
 body {
 	background: #FFF;
-	font-family: 'Lato', sans-serif;
+  font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 }
 .modal-container {
