--- a/client/modules/Transaction/components/TransactionNavBar/TransactionNavBar.css
+++ b/client/modules/Transaction/components/TransactionNavBar/TransactionNavBar.css
@@ -1,3 +1,9 @@
 .cointain >div {
   width: 100% !important;
 }
+.customPagination {
+  margin: 10px 0 !important;
+}
+.customCheckbox {
+  margin: 0 !important;
+}
